# poetry-cython-example

./: .dockerignore  .gitignore  build.py  pyproject.toml
poetry_cython_example/: distances.pyx
