[build-system]
requires = [
  "poetry-core>=1.0.0a9",
  "Cython~=0.29.6",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "poetry-cython-example"
version = "0.1.0"
description = ""
authors = []
packages = [{ include = "poetry_cython_example" }]
include = [{ path = "poetry_cython_example/**/*.so", format = "wheel" }]

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
python = "~3.6.1"

[tool.poetry.dev-dependencies]
